--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ services:
         uid: 1000
       context: ./
       dockerfile: Dockerfile
-    image: Avaliacao_VX
-    container_name: Avaliacao_VX-app
+    image: avaliacao_VX
+    container_name: avaliacao_VX-app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
       - ./:/var/www
     networks:
-      - Avaliacao_VX
+      - avaliacao_vx
 
   db:
     image: mysql:5.7
-    container_name: Avaliacao_VX-db
+    container_name: avaliacao_vx-db
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
@@ -29,13 +29,13 @@ services:
     volumes:
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
-      - Avaliacao_VX
+      - avaliacao_vx
       ports:
         - "3306:3306"
 
   nginx:
     image: nginx:alpine
-    container_name: Avaliacao_VX-nginx
+    container_name: avaliacao_vx-nginx
     restart: unless-stopped
     ports:
       - 8000:80
@@ -43,7 +43,7 @@ services:
       - ./:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
     networks:
-      - Avaliacao_VX
+      - avaliacao_vx
 
 networks:
   travellist:
