--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+DB_PASSWORD_ROOT=root@2021$kbg7
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
