--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,35 +7,35 @@ services:
         uid: 1000
       context: ./
       dockerfile: Dockerfile
-    image: avaliacao_vx
-    container_name: avaliacao_vx-app
+    image: avaliacao-vx
+    container_name: avaliacao-vx-app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
       - ./:/var/www
     networks:
-      - avaliacao_vx
-
+      - avaliacao-vx
   db:
     image: "mysql:5.7"
-    container_name: avaliacao_vx-db
+    container_name: avaliacao-vx-db
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD_ROOT}
       MYSQL_USER: ${DB_USERNAME}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
-      - avaliacao_vx
+      - avaliacao-vx
     ports:
       - "3306:3306"
     
   nginx:
     image: nginx:alpine
-    container_name: avaliacao_vx-nginx
+    container_name: avaliacao-vx-nginx
     restart: unless-stopped
     ports:
       - 8000:80
@@ -43,8 +43,8 @@ services:
       - ./:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
     networks:
-      - avaliacao_vx
+      - avaliacao-vx
 
 networks:
-  avaliacao_vx:
+  avaliacao-vx:
     driver: bridge
